runs/idea005/design003/test_output/slurm_test_55234000.out
Loading conda version miniforge3-24.7.1
[test] Running train.py in /work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003 with 2 train seqs, 1 val seq, for 2 epochs.
Device: cuda
Output: /work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003/test_output
  Saved script snapshot → /work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003/test_output/train_snapshot.py

Building data splits ...
  Loaded splits from /work/pi_nwycoff_umass_edu/hang/auto/splits_rome_tracking.json
  Sequences — train: 2, val: 1
  Frames  — train: 61, val: 33

Building sapiens_0.3b ...
[weights] patch_embed: 3ch → 4ch  (depth = mean of RGB channels)
[weights] pos_embed: 64×64 → 40×24  (bicubic)
[weights] Loaded 293 / 299 backbone tensors
[weights] Head (81 tensors) randomly initialised
[weights] Missing (6): ['backbone.depth_cond_pe.fc1.weight', 'backbone.depth_cond_pe.fc1.bias', 'backbone.depth_cond_pe.fc2.weight', 'backbone.depth_cond_pe.fc2.bias', 'backbone.depth_cond_pe.fc3.weight']...
  Parameters: 309.1M

Starting training for 2 epochs ...

Epoch 1/2  lr_backbone=3.33e-06  lr_head=3.33e-05
Epoch 1 [train]:   0%|          | 0/16 [00:00<?, ?it/s]Epoch 1 [train]:   0%|          | 0/16 [00:00<?, ?it/s]
Traceback (most recent call last):
  File "<stdin>", line 19, in <module>
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003/code/train.py", line 228, in main
    train_m = train_one_epoch(model, train_loader, optimizer, scaler, device, epoch + 1, args,
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003/code/train.py", line 76, in train_one_epoch
    out    = model(x)
             ^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1739, in _wrapped_call_impl
    return self._call_impl(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1750, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003/code/model.py", line 263, in forward
    return self.head(self.backbone(x))
                     ^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1739, in _wrapped_call_impl
    return self._call_impl(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1750, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea005/design003/code/model.py", line 116, in forward
    x_tokens = patch_tokens + pe_base + pe_correction   # (B, 960, embed_dim)
               ~~~~~~~~~~~~~^~~~~~~~~
TypeError: can only concatenate tuple (not "Parameter") to tuple
[test] Finished.
